# talosbot

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg  setup.py
examples/: README.md  cli.py  regex.py  talosgram.py  taloslack.py
talosbot/: __init__.py  logs.py  talos.py
talosbot/channels/: abstract_channel.py  cli.py  slack.py  telegram.py
talosbot/cli/: entrypoint.py
talosbot/matchers/: abstract_matcher.py  bert.py  exceptions.py  regex.py
talosbot/parsers/: abstract_parser.py  exceptions.py  ner.py  regex.py
