[metadata]
name = talosbot
version = 0.2.0
author = Sergio Perez Rodriguez
author_email = sergiopr89@gmail.com
description = Talos chatops framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/talosbotoss/talosbot
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    jsonschema
    python-telegram-bot
    sentence-transformers
    spacy
    spacy-transformers
    spacy-lookups-data
    slack-bolt

[options.entry_points]
console_scripts =
    talos = talosbot.cli.entrypoint:TalosCLI.run
